suprresion de fichier inutile